--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>flume</module>
+        <module>hive</module>
     </modules>
 </project>
